crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_065_IremH3001_Adventures_of_Tom_Sawyer_U_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-065-IremH3001/Adventures of Tom Sawyer (U) [!].zip
rom_sha256=7aeb74ea167c8cd1420a8c52ef4200383d07ebaf5064fe161ee337932f246a2e
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=ac7ddd9e358cb80f
checkpoint f900 fb_fnv1a64=b322ffb44a2ae8a2
checkpoint f1100 fb_fnv1a64=8a3c40c74e604c1e
