crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_065_IremH3001_Daiku_no_Gen_san_2_Akage_no_Dan_no_Gyakushuu_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-065-IremH3001/Daiku no Gen-san 2 - Akage no Dan no Gyakushuu (Japan).zip
rom_sha256=de9fff6cf332a2ff4a26fc707f2c4584d75bfc1e43aae0f063d25f9ff2bd0c91
frames=1141
fb_bytes=245760
cycles=33949784
audio_samples=836505
audio_fnv1a64=b08f81589defd68e
checkpoint f900 fb_fnv1a64=ace012f889fad95c
checkpoint f1100 fb_fnv1a64=d0369e6a6047a84f
