crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_065_IremH3001_Kaiketsu_Yancha_Maru_3_Taiketsu_Zouringen_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-065-IremH3001/Kaiketsu Yancha Maru 3 - Taiketsu! Zouringen (Japan).zip
rom_sha256=1f3c37eed0b1054b9530307be0521ca6f4de9e7c9878fd0828fca79a59bab758
frames=1141
fb_bytes=245760
cycles=33949786
audio_samples=836505
audio_fnv1a64=250d15723197cbff
checkpoint f900 fb_fnv1a64=fc232dd7fe020075
checkpoint f1100 fb_fnv1a64=fc232dd7fe020075
