crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_066_GxROM_Doraemon_Japan_En_1_0.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-066-GxROM/Doraemon (Japan) (En) (1.0).nes
rom_sha256=3d87cffb1fa4f9604582669e8d64e8bd92d0e8708cf0afc69773c8cb8569eb9f
frames=1141
fb_bytes=245760
cycles=33949783
audio_samples=836505
audio_fnv1a64=394ccb1c15bee02b
checkpoint f900 fb_fnv1a64=2e7359d9d7f0bb6e
checkpoint f1100 fb_fnv1a64=da2773f8ee219070
