crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_066_GxROM_Dragon_Power_USA_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-066-GxROM/Dragon Power (USA).zip
rom_sha256=09a1059ee36689f699eb7a521effb06147de0d4dbbb1f6a32983cb1a9ed69358
frames=1141
fb_bytes=245760
cycles=33949782
audio_samples=836505
audio_fnv1a64=f23d1d66017632dc
checkpoint f900 fb_fnv1a64=ec0e9a58e764f3e0
checkpoint f1100 fb_fnv1a64=6a91ff4f62a9a940
